1999-02-09  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-exec.c (gnome_execute_shell): no semantic changes at this
	point in the release schedule.  If you need the stuff not to close
	file descriptors, use the proper API.

1999-02-09  Chris Lahey  <clahey@umich.edu>

	* gnome-paper.c: Made the conversion factors a bit more accurate.

1999-02-05  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-mime-info.h: Constify

1999-02-06  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-metadata.c (maybe_scan_app_dir): It is not necessary to
	cast scan_app_file when passing it to scandir().  Pointed out by
	Frederic L.W.Meunier (linux@urbi.com.br).

1999-02-05  Felix Bellaby <felix@pooh.u-net.com>

	* gnome-config.c (gnome_config_make_vector): Unescape characters
	escaped in gnome_config_assemble_vector.

1999-02-05  Jeff Garzik  <jgarzik@pobox.com>

	* gnome-metadata.c:
	Fix small API doc typo.

1999-02-03  James Henstridge  <james@daa.com.au>

	* gnome-config.h (gnome_config_private_set_*): most of these macros
	were broken.  They specified val as an argument, then didn't use it
	in the expansion.  I changed it to look like the gnome_config_set_*
	macros.

1999-02-01  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-metadata.c (lock): If the metatada directory is still
	locked after 30 seconds, claim metadata-lock ownership.

1999-01-27  Jeff Garzik  <jgarzik@pobox.com>

	* gnome-config.c, gnome-exec.c, gnome-help.c, gnome-metadata.c:
	Include autoconf incantation for defining alloca.
	Surround config.h with #ifdef HAVE_CONFIG_H as necessary.

	* gnome-exec.c, gnome-magic.c, gnomelib-init.c:
	Add break statement to trailing default switch case.

	* gnome-popt.c, gnome-triggers.c:
	Remove unused alloca.h include.

1999-01-27  Raja R Harinath  <harinath@cs.umn.edu>

	* libgnome/Makefile.am (INCLUDES): Use a G_LOG_DOMAIN of `Gnome'.
	Suggested by Tim Janik <timj@gtk.org>.

1999-01-25  Miguel de Icaza  <miguel@nuclecu.unam.mx>
