@@ -1,3 +1,8 @@
+1999-02-10  Miguel de Icaza  <miguel@nuclecu.unam.mx>
+
+	* gnome-paper.c: Use new names GnomePaper and GnomeUnit.  Keep the
+	old versions for compatibility with other apps.
+
 1999-02-09  Miguel de Icaza  <miguel@nuclecu.unam.mx>
 
 	* gnome-exec.c (gnome_execute_shell): no semantic changes at this
